plugins {
    id 'java'
    id 'maven-publish'
}

group = 'com.globalreach'
version = '1.0.2-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.slf4j:slf4j-api:1.7.26'
    implementation 'io.netty:netty-all:4.1.36.Final'
}
